overflow fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 
 html,body{
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
